# bear-lang

./: .clang-format  .clang-tidy  .envrc  .gdbinit  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.md  README.md  \  clean.sh  resources.md
bearc/: CMakeLists.txt
bearc/include/bearc/: bearc.h
bearc/include/bearc/cli/: args.h
bearc/include/bearc/compiler/: compile.h  lexer.h  token.h
bearc/include/bearc/compiler/ast/: ast.h  expr.h  params.h  printer.h  stmt.h  stmt_slice.h  type.h
bearc/include/bearc/compiler/diagnostics/: error_codes.h  error_list.h  src_view.h
bearc/include/bearc/utils/: ansi_codes.h  arena.h  file_io.h  spill_arr.h  strimap.h  string.h  vector.h
bearc/src/: ansi_codes.h  bearc.c  main.c
bearc/src/cli/: args.c  args.h  bearc.c  import_path.cpp  import_path.h  versioning.h
bearc/src/compiler/: compile.c  compile.cpp  debug.c  debug.h  lexer.c  lexer.h  token.c  token.h
bearc/src/compiler/ast/: ast.c  ast.h  expr.h  expressions.h  node.c  node.h  node_arena.c  node_arena.h  node_type.h  params.h  parser.c  parser.h  print_out.c  print_out.h  printer.c  printer.h  statements.h  stmt.h  stmt_slice.h  type.h
bearc/src/compiler/diagnostics/: error_codes.c  error_list.c  error_list.h  src_view.c  src_view.h
bearc/src/compiler/hir/: arena_str_hash_map.hpp  ast_visitor.cpp  ast_visitor.hpp  builder.cpp  builder.h  builder.hpp  compt_expr_solver.cpp  compt_expr_solver.hpp  context.cpp  context.hpp  context_database.cpp  context_database.hpp  def.h  def.hpp  def_visitor.cpp  def_visitor.hpp  diagnostic.cpp  diagnostic.hpp  exec.cpp  exec.h  exec.hpp  exec_ops.cpp  exec_ops.h  exec_ops.hpp  exec_proving.cpp  exec_proving.hpp  expr_solver.hpp  expr_to_exec.hpp  file.cpp  file.h  file.hpp  generic.hpp  id_hash_map.hpp  id_map.hpp  id_set.hpp  identifier.h  identifier.hpp  indexing.h  indexing.hpp  matching.hpp  (+21 more)
bearc/src/compiler/parser/: expr.c  expr.h  parse_expr.c  parse_expr.h  parse_stmt.c  parse_stmt.h  parse_token_slice.c  parse_token_slice.h  parse_type.c  parse_type.h  parser.c  parser.h  rules.c  rules.h  stmt.c  stmt.h  token_eaters.c  token_eaters.h
bearc/src/compiler/span/: span.c  span.h
bearc/src/containers/: arena.c  string.h  string_view.h  vector.c
bearc/src/testing/: test.c  test.h
bearc/src/tests/: test.c  test.cpp  test.h
bearc/src/utils/: ansi_codes.c  arena.c  data_arena.cpp  data_arena.hpp  file_io.c  file_io.h  log.h  log.hpp  mapu32u32.c  mapu32u32.h  spill_arr.c  stl_compliant_arena.hpp  strimap.c  strimap.h  string.c  string_view.h  vector.c
docs/: build.md  cli.txt  hir_design.md  hir_design.txt  lsp-compat.md  references.md  resources.md  syntax.md  syntax.txt  timeline.md  todo.md  tool-chain.md
docs/bvm/: opcodes.md
include/: bearlang.h  bearscript.h
include/bearlang/: bearlang.h
scripts/: build-tests-no-llvm.sh  clean-all.sh  clean-no-llvm.sh  clean.sh  gen_ovld.py  llvm-init.sh  llvm-install.sh  llvm-remove-artifacts.sh  tests.sh
src/: ansi_codes.h  bearlang.c  bearscript.c  bs_interpreter.c  bvm.h  cli_args.c  cli_args.h  file_io.c  file_io.h  log.h  main.c
src/bvm/: opcodes.h
src/cli/: args.c  args.h  flags.h
src/compiler/: ast.c  ast.h  compile.c  compile.h  lexer.c  lexer.h  token.c  token.h
src/compiler/ast/: node.c  node.h  node_arena.c  node_arena.h  parser.c  parser.h
src/compiler/diagnostics/: error_codes.c  error_codes.h  error_list.c  error_list.h  src_view.c  src_view.h
src/compiler/errors/: error_codes.c  error_codes.h  error_list.c  error_list.h  error_messages.c  error_messages.h
src/containers/: arena.c  arena.h  str_i_hashmap.h  strimap.c  strimap.h  string.c  string.h  string_view.h  vector.c  vector.h
src/interpreter/: file_io.c  file_io.h
src/tests/: test.c  test.h
test_cases/: 0.br  1.br  2.br  3.br  4.br  5.br  6.br  7.br
tests/: 0.br  01.br  05.br  06.br  08.br  1.br  10.br  11.br  12.br  13.br  14.br  15.br  17.br  18.br  19.br  2.br  20.br  21.br  22.br  24.br  28.br  29.br  3.br  30.br  32.br  34.br  35.br  36.br  37.br  38.br  39.br  41.br  42.br  43.br  44.br  46.br  5.br  7.br  8.br  9.br
tests/hir/: 00.br  01.br  02.br  04.br  05.br  06.br  07.br  08.br  09.br  10.br  11.br  12.br  13.br  14.br  15.br  16.br  17.br  18.br  19.br  20.br  21.br  22.br  23.br  24.br  25.br  26.br  27.br  28.br  29.br  30.br  31.br  32.br  33.br  34.br  35.br  36.br  37.br  38.br  39.br  40.br  (+38 more)
tests/parser/: 01.br  02.br  04.br  07.br  10.br  12.br  16.br  19.br  22.br  23.br  25.br  26.br  27.br  28.br  29.br  31.br  32.br  33.br  34.br  35.br  37.br  38.br  40.br  41.br  42.br  43.br  44.br  45.br  46.br  47.br  48.br  49.br  50.br  51.br  52.br  53.br  54.br  55.br  56.br  57.br  (+2 more)
tests/projects/00/: 00.br  01.br
tests/projects/01/: 00.br  01.br
tests/projects/02/: 00.br
tests/projects/03/: 00.br  01.br
tools/bear-ls/: plan.md
tools/nvim-vim-syntax-highlighting/: README.md
tools/nvim-vim-syntax-highlighting/syntax/: bear.vim
